--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -38,7 +38,36 @@ $shadow-inset: rgba(255, 255, 255, 0.5);
   gap: 6px;
   cursor: pointer;
 }
+.gray_btn {
+  border: none;
+  outline: none;
+  background: $bg-secondary;
+  padding: 8.5px 12px;
+  border-radius: 7px;
+  font-family: inherit;
+  font-weight: 600;
+  font-size: 14px;
+  color: #000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 6px;
+  cursor: pointer;
+  text-decoration: none;
+}
+
 /*----Buttons----*/
+/*-----Hovers-----*/
+.hover1:hover {
+  background: $bg-secondary;
+}
+.hover2:hover {
+  background: $bg-third;
+}
+.hover3:hover {
+  background: #d4d6da3a;
+}
+/*-----Hovers-----*/
 .blur {
   position: fixed;
   top: 0;
