--- a/src/assets/styles/pages/login.scss
+++ b/src/assets/styles/pages/login.scss
@@ -1,4 +1,3 @@
-
 .login {
   background: $bg-secondary;
   .login_wrapper {
@@ -40,11 +39,15 @@
           gap: 1rem;
           background: $bg-primary;
           box-shadow: 0 1px 2px $shadow-1;
-          padding: 1rem 0 2rem 0;
+          padding: 15px;
           width: 350px;
           height: fit-content;
           margin: 1rem auto;
           border-radius: 10px;
+
+          form {
+            width: 100%;
+          }
 
           button {
             width: 100%;
@@ -81,45 +84,6 @@
           }
         }
 
-        .login_footer {
-          padding: 1.5rem;
-
-          .login_footer_wrap {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 3px 10px;
-            font-size: 14px;
-            color: $color-secondary;
-            margin: 0 auto;
-
-            a {
-              color: inherit;
-              text-decoration: none;
-              display: flex;
-              align-items: center;
-
-              &:hover {
-                text-decoration: underline;
-              }
-            }
-
-            .footer_square {
-              cursor: pointer;
-              background: #fff;
-              height: 20px;
-              width: 30px;
-              display: flex;
-              align-items: center;
-              justify-content: center;
-              border: 1px solid $bg-third;
-              box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
-
-              svg {
-                width: 15px;
-              }
-            }
-          }
-        }
       }
     }
   }
@@ -149,8 +113,5 @@
     span {
       font-size: 20px;
     }
-  }
-  .login_2_wrap {
-    width: 400px !important;
   }
 }
