--- a/src/components/common/Button/Button.scss
+++ b/src/components/common/Button/Button.scss
@@ -6,6 +6,9 @@
   align-items: center;
   justify-content: center;
   gap: 0.5rem;
+  width: 100%;
+  height: 30px;
+  user-select: none;
 
   padding: 0.6rem 1.2rem;
   font-weight: 600;
@@ -20,9 +23,7 @@
 
 .fancy-button.popup {
   background: $bg-fifth;
-  width: 70% !important;
   font-weight: 600;
-  font-size: 17px;
   color: $green-color;
   border: 2px solid #42b72a;
 }
@@ -59,3 +60,21 @@
 .fancy-button:active {
   transform: scale(0.95);
 }
+
+.fancy-button:disabled,
+.fancy-button[disabled] {
+  opacity: 0.6;
+  cursor: not-allowed;
+  pointer-events: none;
+  transform: none !important; // disables scale/animation
+  border-color: #ccc;
+  color: #999;
+  background-color: #f2f2f2;
+}
+
+.fancy-button.popup:disabled {
+  border-color: #ccc;
+  color: #999;
+  background-color: #e4e4e4;
+}
+
